deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-k8s-app
  labels:
    app: node-k8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-k8s-app
  template:
    metadata:
      labels:
        app: node-k8s-app
    spec:
      containers:
        - name: node-k8s-app
          image: thachdang207/node-k8s-app:latest
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '128Mi'
              cpu: '500m'
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
