service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-k8s-service
  labels:
    app: node-k8s-app
spec:
  type: ClusterIP
  selector:
    app: node-k8s-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: node-k8s-service-nodeport
  labels:
    app: node-k8s-app
spec:
  type: NodePort
  selector:
    app: node-k8s-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30007
      protocol: TCP
